<resources>
    <string name="app_name">FrumToronto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_directory">Directory</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="title_activity_classified">Classified</string>
    <string name="title_activity_shuls_and_tefillos">ShulsAndTefillos</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="directory_button_text">Directory</string>
    <string name="alerts_button_text">Alerts</string>
    <string name="shuls_and_tefillos_button_text">Shuls and tefillos</string>
    <string name="classified_button_text">Classified</string>
    <string name="contact_us_button_text">Contact us</string>
    <string name="show_toronto_weather_button_text">Click here for Toronto weather</string>
    <string name="show_local_weather_button_text">Click here to check the weather in your area</string>
    <string name="directory_rates_button_text">Directory rates</string>
    <string name="advanced_search_button_text">Advanced Search</string>
    <string name="title_activity_buisness_directory">BuisnessDirectory</string>
    <string name="title_activity_register_your_buisness">RegisterYourBusiness</string>
    <string name="title_activity_calendar_web_page">CalendarWebPage</string>
    <string name="title_activity_directory_rates">DirectoryRates</string>
    <string name="title_activity_advanced_search">AdvancedSearch</string>
    <string name="title_activity_business_services">BusinessServices</string>
    <string name="title_activity_clothing_and_accessories">ClothingAndAccessories</string>
    <string name="title_activity_financial_services">FinancialServices</string>
    <string name="title_activity_government_and_institutions">GovernmentAndInstitutions</string>
    <string name="title_activity_health_and_beauty">HealthAndBeauty</string>
    <string name="title_activity_home_and_garden">HomeAndGarden</string>
    <string name="title_activity_jewish_community_services">JewishCommunityServices</string>
    <string name="title_activity_kosher_foods">KosherFoodsActivity</string>
    <string name="title_activity_property_and_accomodations">PropertyAndAccommodations</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_simchas">Simchas</string>
    <string name="title_activity_sport_and_leisure">SportAndLeisure</string>
    <string name="title_activity_transport_and_auto">TransportAndAuto</string>
    <string name="title_activity_weekly_shiurim">WeeklyShiurim</string>
    <string name="title_activity_zmanim">Zmanim</string>
    <string name="title_activity_bulletins_and_alerts">BulletinsAndAlerts</string>
    <string name="title_activity_kosher_alerts">KosherAlerts</string>
    <string name="title_activity_shiva_notifications">ShivaNotifications</string>
    <string name="title_activity_classified_web_page">ClassifiedWebPage</string>
    <string name="title_activity_weekly_specials">WeeklySpecials</string>
    <string name="title_activity_davening_schedule">DaveningSchedule</string>
    <string name="title_activity_shul_listings">ShulListings</string>
    <string name="title_activity_mincha_list">MinchaList</string>
    <string name="title_activity_community_newsletters">CommunityNewsletters</string>
    <string name="title_activity_weekly_publications">WeeklyPublications</string>
    <string name="title_activity_tehillim_list">TehillimList</string>
    <string name="title_activity_contact_us_webpage">ContactUsWebpage</string>
    <string name="title_activity_advertising_rates">AdvertisingRates</string>
    <string name="title_activity_frequently_asked_questions">FrequentlyAskedQuestions</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="home_and_garden_button_text">Home and garden</string>
    <string name="business_services_button_text">Business services</string>
    <string name="financial_services_button_text">Financial services</string>
    <string name="simchas_button_text">Simchas</string>
    <string name="sport_and_leisure_button_text">Sport and leisure</string>
    <string name="transport_and_auto_button_text">Transport and auto</string>
    <string name="shopping_button_text">Shopping</string>
    <string name="business_directory_button_text">Business directory</string>
    <string name="clothing_and_accessories_button_text">Clothing and accessories</string>
    <string name="property_and_accommodations_button_text">Property and accommodations</string>
    <string name="government_and_institutions_button_text">Government and institutions</string>
    <string name="register_your_business_button_text">Register your business</string>
    <string name="heath_and_beauty_button_text">Heath and beauty</string>
    <string name="jewish_community_services_button_text">Jewish community services</string>
    <string name="kosher_foods_activity">Kosher foods</string>
    <string name="services_button_text">Services</string>
    <string name="weekly_shiurim_button_text">Weekly shiurim</string>
    <string name="zmanim_button_text">Zmanim</string>
    <string name="weekly_specials_button_text">Weekly specials</string>
    <string name="davening_schedule_button_text">Davening schedule</string>
    <string name="shul_listings_button_text">Shul listings</string>
    <string name="mincha_list_button_text">Mincha list</string>
    <string name="newsletters_button_text">Newsletters</string>
    <string name="weekly_publications_button_text">Weekly publications</string>
    <string name="tehillim_list_button_text">Tehillim list</string>
    <string name="advertising_rates_button_text">Advertising rates</string>
    <string name="frequently_asked_questions_button_text">Frequently asked questions</string>
    <string name="about_us_button_text">About us</string>
    <string name="ask_the_rabbi_button_text">Ask the rabbi</string>
    <string name="internet_connection_error_message">Internet service is unavailable. Please check your Internet connection and try again.</string>
    <string name="query_error_message">Error getting data from the website</string>
    <string name="no_web_browser_error_message">You need to install a web browser for this feature to work</string>
    <string name="loading_message">Some links may not show in the app. Loading</string>
    <string name="become_a_member_button_text">Become a member</string>
    <string name="opening_link_error_message">Error opening this link</string>
    <string name="web_view_warning_message">Some links may not show in the app</string>
    <string name="bulletins_and_alerts_button_text">Bulletins and alerts</string>
    <string name="kosher_alerts_button_text">Kosher alerts</string>
    <string name="shiva_notifications_button_text">Shiva notifications</string>
    <string name="title_activity_register_in_the_person_directory">
        RegisterInThePersonDirectoryActivity
    </string>
    <string name="name_edit_text_hint">Enter your name</string>
    <string name="address_edit_text_hint">Enter your address</string>
    <string name="password_prompt_text_view_text">Enter your password below</string>
    <string name="register_button_text">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button_text">Login</string>
    <string name="url_not_found_error_message">The URL of the server was not found</string>
    <string name="password_error_message">The password you have entered is too short</string>
    <string name="title_activity_person_data">PersonDataActivity</string>
    <string name="update_button_text">Update</string>
    <string name="change_listing_instructions">Change your listing in the text fields below. Click on the appropriate button to make changes.</string>
    <string name="access_the_persons_directory_button_text">Access the persons directory</string>
    <string name="delete_button_text">Delete</string>
    <string name="log_out_button_text">Log out</string>
    <string name="reset_button_text">Reset</string>
    <string name="phone_number_edit_text_hint">Enter your phone number</string>
    <string name="show_message_board_button_text">Show message board</string>
    <string name="title_activity_persons_directory">PersonsDirectoryActivity</string>
    <string name="show_persons_directory_button_text">Show persons directory</string>
</resources>
