<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background_colour"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.boes.peretz.frumtoronto.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button2"
        android:text="@string/calendar_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="showCalendarActivity"/>

    <Button
        android:id="@+id/button"
        android:text="@string/directory_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showDirectoryActivity"/>

    <Button
        android:id="@+id/button3"
        android:text="@string/alerts_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="showAlertsActiviy"/>

    <Button
        android:id="@+id/button5"
        android:text="@string/shuls_and_tefillos_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="showShulsAndTefillosActivity"/>

    <Button
        android:id="@+id/button4"
        android:text="@string/classified_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="showClassifiedActivity"/>

    <Button
        android:id="@+id/button6"
        android:text="@string/contact_us_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="showContactUsActivity"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_centerHorizontal="true"
        android:onClick="showTorontoWeather"
        android:text="@string/show_toronto_weather_button_text"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button9"
        android:text="@string/show_local_weather_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="showWeatherNetworkWebsite"/>

    <Button
        android:id="@+id/button33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_centerHorizontal="true"
        android:onClick="showAskTheRabbiWebpage"
        android:text="@string/ask_the_rabbi_button_text"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button33"
        android:layout_alignEnd="@+id/button33"
        android:layout_alignRight="@+id/button33"
        android:onClick="showBecomeAMemberWebpage"
        android:text="@string/become_a_member_button_text"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button40"
        android:layout_centerHorizontal="true"
        android:onClick="showPersonsDirectoryLoginPage"
        android:text="@string/access_the_persons_directory_button_text"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button50"
        android:text="@string/show_message_board_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button42"
        android:layout_centerHorizontal="true"
        android:onClick="showMessageBoard"/>

    <Button
        android:id="@+id/button51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button40"
        android:layout_alignBottom="@+id/button40"
        android:layout_toEndOf="@+id/button50"
        android:layout_toRightOf="@+id/button50"
        android:onClick="showPersonsDirectory"
        android:text="@string/show_persons_directory_button_text"
        android:textAllCaps="false" />

</RelativeLayout>
