<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/content_shuls_and_tefillos"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/menu_background_colour"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.boes.peretz.frumtoronto.ShulsAndTefillosActivity"
    tools:showIn="@layout/activity_shuls_and_tefillos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/button36"
        android:text="@string/davening_schedule_button_text"
        android:textAllCaps="false"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:onClick="showDaveningSchedule"/>

    <Button
        android:id="@+id/button37"
        android:text="@string/shul_listings_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="showShulListings"/>

    <Button
        android:id="@+id/button38"
        android:text="@string/mincha_list_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:onClick="showMinchaListings"/>

    <Button
        android:id="@+id/button39"
        android:text="@string/newsletters_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:onClick="showNewsletters"/>

    <Button
        android:id="@+id/button41"
        android:text="@string/weekly_publications_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showWeeklyPublications"/>

    <Button
        android:id="@+id/button43"
        android:text="@string/tehillim_list_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:onClick="showTehillimList"/>
    </LinearLayout>
</ScrollView>
