<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.boes.peretz.frumtoronto.PersonDataActivity"
    tools:showIn="@layout/activity_person_data">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/email_info_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:text="@string/change_listing_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"/>

            <EditText
                android:id="@+id/username_data_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password_data_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/phone_number_data_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <EditText
                android:id="@+id/address_data_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_button_text"
                android:textAllCaps="false"
                android:onClick="clickUpdateButton"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_text"
                android:textAllCaps="false"
                android:onClick="clickDeleteButton"/>

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_button_text"
                android:textAllCaps="false"
                android:onClick="clickResetButton"/>

            <Button
                android:id="@+id/log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out_button_text"
                android:textAllCaps="false"
                android:onClick="clickSignoutButton"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
