<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_calendar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background_colour"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.boes.peretz.frumtoronto.CalendarActivity"
    tools:showIn="@layout/activity_calendar">

    <Button
        android:id="@+id/button27"
        android:text="@string/calendar_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp"
        android:onClick="showCalendar"/>

    <Button
        android:id="@+id/button28"
        android:text="@string/weekly_shiurim_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button27"
        android:layout_alignLeft="@+id/button27"
        android:layout_alignStart="@+id/button27"
        android:layout_marginTop="23dp"
        android:onClick="showWeeklyShiurim"/>

    <Button
        android:id="@+id/button29"
        android:text="@string/zmanim_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button28"
        android:layout_alignLeft="@+id/button28"
        android:layout_alignStart="@+id/button28"
        android:layout_marginTop="24dp"
        android:onClick="showZmanim"/>
</RelativeLayout>

